// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ReportsHeaderActions > has correct extraMenuItems in mobile 1`] = `
[
  {
    "disabled": true,
    "icon": "M12,15.39L8.24,17.66L9.23,13.38L5.91,10.5L10.29,10.13L12,6.09L13.71,10.13L18.09,10.5L14.77,13.38L15.76,17.66M22,9.24L14.81,8.63L12,2L9.19,8.63L2,9.24L7.45,13.97L5.82,21L12,17.27L18.18,21L16.54,13.97L22,9.24Z",
    "onClick": [Function],
    "text": "Save",
    "visible": true,
  },
  {
    "disabled": false,
    "icon": "M11,17H4A2,2 0 0,1 2,15V3A2,2 0 0,1 4,1H16V3H4V15H11V13L15,16L11,19V17M19,21V7H8V13H6V7A2,2 0 0,1 8,5H19A2,2 0 0,1 21,7V21A2,2 0 0,1 19,23H8A2,2 0 0,1 6,21V19H8V21H19Z",
    "onClick": [Function],
    "text": "Duplicate",
    "visible": true,
  },
  {
    "disabled": true,
    "icon": "M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z",
    "onClick": [Function],
    "text": "Edit",
    "visible": true,
  },
  {
    "disabled": true,
    "icon": "M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z",
    "onClick": [Function],
    "text": "Delete",
    "visible": true,
  },
  {
    "icon": "M18,16.08C17.24,16.08 16.56,16.38 16.04,16.85L8.91,12.7C8.96,12.47 9,12.24 9,12C9,11.76 8.96,11.53 8.91,11.3L15.96,7.19C16.5,7.69 17.21,8 18,8A3,3 0 0,0 21,5A3,3 0 0,0 18,2A3,3 0 0,0 15,5C15,5.24 15.04,5.47 15.09,5.7L8.04,9.81C7.5,9.31 6.79,9 6,9A3,3 0 0,0 3,12A3,3 0 0,0 6,15C6.79,15 7.5,14.69 8.04,14.19L15.16,18.34C15.11,18.55 15.08,18.77 15.08,19C15.08,20.61 16.39,21.91 18,21.91C19.61,21.91 20.92,20.61 20.92,19A2.92,2.92 0 0,0 18,16.08Z",
    "onClick": [Function],
    "text": "Copy link",
    "visible": true,
  },
]
`;

exports[`ReportsHeaderActions > has correct extraMenuItems when isUserBookmark is false 1`] = `
[
  {
    "disabled": false,
    "icon": "M11,17H4A2,2 0 0,1 2,15V3A2,2 0 0,1 4,1H16V3H4V15H11V13L15,16L11,19V17M19,21V7H8V13H6V7A2,2 0 0,1 8,5H19A2,2 0 0,1 21,7V21A2,2 0 0,1 19,23H8A2,2 0 0,1 6,21V19H8V21H19Z",
    "onClick": [Function],
    "text": "Duplicate",
    "visible": true,
  },
  {
    "disabled": true,
    "icon": "M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z",
    "onClick": [Function],
    "text": "Edit",
    "visible": true,
  },
  {
    "disabled": true,
    "icon": "M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z",
    "onClick": [Function],
    "text": "Delete",
    "visible": true,
  },
  {
    "icon": "M14,2L20,8V20A2,2 0 0,1 18,22H6A2,2 0 0,1 4,20V4A2,2 0 0,1 6,2H14M18,20V9H13V4H6V20H18M12,19L8,15H10.5V12H13.5V15H16L12,19Z",
    "loading": undefined,
    "onClick": [Function],
    "text": "Print",
    "visible": true,
  },
]
`;

exports[`ReportsHeaderActions > has correct extraMenuItems when isUserBookmark is true 1`] = `
[
  {
    "disabled": false,
    "icon": "M11,17H4A2,2 0 0,1 2,15V3A2,2 0 0,1 4,1H16V3H4V15H11V13L15,16L11,19V17M19,21V7H8V13H6V7A2,2 0 0,1 8,5H19A2,2 0 0,1 21,7V21A2,2 0 0,1 19,23H8A2,2 0 0,1 6,21V19H8V21H19Z",
    "onClick": [Function],
    "text": "Duplicate",
    "visible": true,
  },
  {
    "disabled": false,
    "icon": "M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z",
    "onClick": [Function],
    "text": "Edit",
    "visible": true,
  },
  {
    "disabled": false,
    "icon": "M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z",
    "onClick": [Function],
    "text": "Delete",
    "visible": true,
  },
  {
    "icon": "M14,2L20,8V20A2,2 0 0,1 18,22H6A2,2 0 0,1 4,20V4A2,2 0 0,1 6,2H14M18,20V9H13V4H6V20H18M12,19L8,15H10.5V12H13.5V15H16L12,19Z",
    "loading": undefined,
    "onClick": [Function],
    "text": "Print",
    "visible": true,
  },
]
`;

exports[`ReportsHeaderActions > renders correctly 1`] = `
<div
  class="text-no-wrap d-flex"
>
  <v-menu-stub
    activatorprops="[object Object]"
    attach="false"
    capturefocus="true"
    closedelay="250"
    closeonback="true"
    closeoncontentclick="true"
    contained="false"
    disabled="false"
    disableinitialfocus="false"
    eager="false"
    location="bottom"
    locationstrategy="connected"
    modelvalue="false"
    noclickanimation="false"
    opendelay="300"
    openonhover="false"
    origin="auto"
    persistent="false"
    retainfocus="false"
    scrim="false"
    scrollstrategy="reposition"
    sticktotarget="false"
    submenu="false"
    transition="[object Object]"
    viewportmargin="12"
    zindex="2000"
  >
    <v-list-stub
      activatable="false"
      border="false"
      density="compact"
      disabled="false"
      filterable="false"
      itemchildren="children"
      itemprops="props"
      items=""
      itemsregistration="render"
      itemtitle="title"
      itemtype="type"
      itemvalue="value"
      lines="one"
      mandatory="false"
      nav="false"
      navigationstrategy="focus"
      openstrategy="list"
      returnobject="false"
      selectable="false"
      selectstrategy="single-leaf"
      slim="false"
      tag="div"
      theme="light"
      tile="false"
      variant="text"
    >
      
      <v-list-item-stub
        border="false"
        density="default"
        disabled="false"
        exact="false"
        lines="false"
        nav="false"
        replace="false"
        ripple="true"
        slim="false"
        tag="div"
        tile="false"
        variant="text"
      >
        <list-item-contents-stub
          checkbox="false"
          color="primary"
          dense="true"
          disabled="false"
          error="false"
          flagcountrycode=""
          icon="M11,17H4A2,2 0 0,1 2,15V3A2,2 0 0,1 4,1H16V3H4V15H11V13L15,16L11,19V17M19,21V7H8V13H6V7A2,2 0 0,1 8,5H19A2,2 0 0,1 21,7V21A2,2 0 0,1 19,23H8A2,2 0 0,1 6,21V19H8V21H19Z"
          iconcolor=""
          iconsize=""
          indeterminate="false"
          inputvalue="false"
          isgroupactivatoritem="false"
          issingleselect="false"
          primaryhighlight=""
          primarytext="Duplicate"
          secondaryhighlight=""
          secondarytext=""
          tertiaryhighlight=""
          tertiarytext=""
          tertiarytextclasses=""
        />
      </v-list-item-stub>
      <v-list-item-stub
        border="false"
        density="default"
        disabled="true"
        exact="false"
        lines="false"
        nav="false"
        replace="false"
        ripple="true"
        slim="false"
        tag="div"
        tile="false"
        variant="text"
      >
        <list-item-contents-stub
          checkbox="false"
          color="primary"
          dense="true"
          disabled="true"
          error="false"
          flagcountrycode=""
          icon="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
          iconcolor=""
          iconsize=""
          indeterminate="false"
          inputvalue="false"
          isgroupactivatoritem="false"
          issingleselect="false"
          primaryhighlight=""
          primarytext="Edit"
          secondaryhighlight=""
          secondarytext=""
          tertiaryhighlight=""
          tertiarytext=""
          tertiarytextclasses=""
        />
      </v-list-item-stub>
      <v-list-item-stub
        border="false"
        density="default"
        disabled="true"
        exact="false"
        lines="false"
        nav="false"
        replace="false"
        ripple="true"
        slim="false"
        tag="div"
        tile="false"
        variant="text"
      >
        <list-item-contents-stub
          checkbox="false"
          color="primary"
          dense="true"
          disabled="true"
          error="false"
          flagcountrycode=""
          icon="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z"
          iconcolor=""
          iconsize=""
          indeterminate="false"
          inputvalue="false"
          isgroupactivatoritem="false"
          issingleselect="false"
          primaryhighlight=""
          primarytext="Delete"
          secondaryhighlight=""
          secondarytext=""
          tertiaryhighlight=""
          tertiarytext=""
          tertiarytextclasses=""
        />
      </v-list-item-stub>
      <v-list-item-stub
        border="false"
        density="default"
        exact="false"
        lines="false"
        nav="false"
        replace="false"
        ripple="true"
        slim="false"
        tag="div"
        tile="false"
        variant="text"
      >
        <list-item-contents-stub
          checkbox="false"
          color="primary"
          dense="true"
          error="false"
          flagcountrycode=""
          icon="M14,2L20,8V20A2,2 0 0,1 18,22H6A2,2 0 0,1 4,20V4A2,2 0 0,1 6,2H14M18,20V9H13V4H6V20H18M12,19L8,15H10.5V12H13.5V15H16L12,19Z"
          iconcolor=""
          iconsize=""
          indeterminate="false"
          inputvalue="false"
          isgroupactivatoritem="false"
          issingleselect="false"
          primaryhighlight=""
          primarytext="Print"
          secondaryhighlight=""
          secondarytext=""
          tertiaryhighlight=""
          tertiarytext=""
          tertiarytextclasses=""
        />
      </v-list-item-stub>
      
    </v-list-stub>
  </v-menu-stub>
  <copy-to-clipboard-button-stub
    content=""
    istext="false"
    shorten="true"
  />
  <evocon-v-button-stub
    class="ml-1"
    color=""
    disabled="true"
    icon="M12,15.39L8.24,17.66L9.23,13.38L5.91,10.5L10.29,10.13L12,6.09L13.71,10.13L18.09,10.5L14.77,13.38L15.76,17.66M22,9.24L14.81,8.63L12,2L9.19,8.63L2,9.24L7.45,13.97L5.82,21L12,17.27L18.18,21L16.54,13.97L22,9.24Z"
    iconcolor=""
    text="Save"
    textclass=""
    type="primary-light"
  />
</div>
`;

exports[`ReportsHeaderActions > renders correctly in mobile view 1`] = `
<div
  class="text-no-wrap d-flex"
>
  <v-menu-stub
    activatorprops="[object Object]"
    attach="false"
    capturefocus="true"
    closedelay="250"
    closeonback="true"
    closeoncontentclick="true"
    contained="false"
    disabled="false"
    disableinitialfocus="false"
    eager="false"
    location="bottom"
    locationstrategy="connected"
    modelvalue="false"
    noclickanimation="false"
    opendelay="300"
    openonhover="false"
    origin="auto"
    persistent="false"
    retainfocus="false"
    scrim="false"
    scrollstrategy="reposition"
    sticktotarget="false"
    submenu="false"
    transition="[object Object]"
    viewportmargin="12"
    zindex="2000"
  >
    <v-list-stub
      activatable="false"
      border="false"
      density="compact"
      disabled="false"
      filterable="false"
      itemchildren="children"
      itemprops="props"
      items=""
      itemsregistration="render"
      itemtitle="title"
      itemtype="type"
      itemvalue="value"
      lines="one"
      mandatory="false"
      nav="false"
      navigationstrategy="focus"
      openstrategy="list"
      returnobject="false"
      selectable="false"
      selectstrategy="single-leaf"
      slim="false"
      tag="div"
      theme="light"
      tile="false"
      variant="text"
    >
      
      <v-list-item-stub
        border="false"
        density="default"
        disabled="true"
        exact="false"
        lines="false"
        nav="false"
        replace="false"
        ripple="true"
        slim="false"
        tag="div"
        tile="false"
        variant="text"
      >
        <list-item-contents-stub
          checkbox="false"
          color="primary"
          dense="true"
          disabled="true"
          error="false"
          flagcountrycode=""
          icon="M12,15.39L8.24,17.66L9.23,13.38L5.91,10.5L10.29,10.13L12,6.09L13.71,10.13L18.09,10.5L14.77,13.38L15.76,17.66M22,9.24L14.81,8.63L12,2L9.19,8.63L2,9.24L7.45,13.97L5.82,21L12,17.27L18.18,21L16.54,13.97L22,9.24Z"
          iconcolor=""
          iconsize=""
          indeterminate="false"
          inputvalue="false"
          isgroupactivatoritem="false"
          issingleselect="false"
          primaryhighlight=""
          primarytext="Save"
          secondaryhighlight=""
          secondarytext=""
          tertiaryhighlight=""
          tertiarytext=""
          tertiarytextclasses=""
        />
      </v-list-item-stub>
      <v-list-item-stub
        border="false"
        density="default"
        disabled="false"
        exact="false"
        lines="false"
        nav="false"
        replace="false"
        ripple="true"
        slim="false"
        tag="div"
        tile="false"
        variant="text"
      >
        <list-item-contents-stub
          checkbox="false"
          color="primary"
          dense="true"
          disabled="false"
          error="false"
          flagcountrycode=""
          icon="M11,17H4A2,2 0 0,1 2,15V3A2,2 0 0,1 4,1H16V3H4V15H11V13L15,16L11,19V17M19,21V7H8V13H6V7A2,2 0 0,1 8,5H19A2,2 0 0,1 21,7V21A2,2 0 0,1 19,23H8A2,2 0 0,1 6,21V19H8V21H19Z"
          iconcolor=""
          iconsize=""
          indeterminate="false"
          inputvalue="false"
          isgroupactivatoritem="false"
          issingleselect="false"
          primaryhighlight=""
          primarytext="Duplicate"
          secondaryhighlight=""
          secondarytext=""
          tertiaryhighlight=""
          tertiarytext=""
          tertiarytextclasses=""
        />
      </v-list-item-stub>
      <v-list-item-stub
        border="false"
        density="default"
        disabled="true"
        exact="false"
        lines="false"
        nav="false"
        replace="false"
        ripple="true"
        slim="false"
        tag="div"
        tile="false"
        variant="text"
      >
        <list-item-contents-stub
          checkbox="false"
          color="primary"
          dense="true"
          disabled="true"
          error="false"
          flagcountrycode=""
          icon="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
          iconcolor=""
          iconsize=""
          indeterminate="false"
          inputvalue="false"
          isgroupactivatoritem="false"
          issingleselect="false"
          primaryhighlight=""
          primarytext="Edit"
          secondaryhighlight=""
          secondarytext=""
          tertiaryhighlight=""
          tertiarytext=""
          tertiarytextclasses=""
        />
      </v-list-item-stub>
      <v-list-item-stub
        border="false"
        density="default"
        disabled="true"
        exact="false"
        lines="false"
        nav="false"
        replace="false"
        ripple="true"
        slim="false"
        tag="div"
        tile="false"
        variant="text"
      >
        <list-item-contents-stub
          checkbox="false"
          color="primary"
          dense="true"
          disabled="true"
          error="false"
          flagcountrycode=""
          icon="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z"
          iconcolor=""
          iconsize=""
          indeterminate="false"
          inputvalue="false"
          isgroupactivatoritem="false"
          issingleselect="false"
          primaryhighlight=""
          primarytext="Delete"
          secondaryhighlight=""
          secondarytext=""
          tertiaryhighlight=""
          tertiarytext=""
          tertiarytextclasses=""
        />
      </v-list-item-stub>
      <v-list-item-stub
        border="false"
        density="default"
        exact="false"
        lines="false"
        nav="false"
        replace="false"
        ripple="true"
        slim="false"
        tag="div"
        tile="false"
        variant="text"
      >
        <list-item-contents-stub
          checkbox="false"
          color="primary"
          dense="true"
          error="false"
          flagcountrycode=""
          icon="M18,16.08C17.24,16.08 16.56,16.38 16.04,16.85L8.91,12.7C8.96,12.47 9,12.24 9,12C9,11.76 8.96,11.53 8.91,11.3L15.96,7.19C16.5,7.69 17.21,8 18,8A3,3 0 0,0 21,5A3,3 0 0,0 18,2A3,3 0 0,0 15,5C15,5.24 15.04,5.47 15.09,5.7L8.04,9.81C7.5,9.31 6.79,9 6,9A3,3 0 0,0 3,12A3,3 0 0,0 6,15C6.79,15 7.5,14.69 8.04,14.19L15.16,18.34C15.11,18.55 15.08,18.77 15.08,19C15.08,20.61 16.39,21.91 18,21.91C19.61,21.91 20.92,20.61 20.92,19A2.92,2.92 0 0,0 18,16.08Z"
          iconcolor=""
          iconsize=""
          indeterminate="false"
          inputvalue="false"
          isgroupactivatoritem="false"
          issingleselect="false"
          primaryhighlight=""
          primarytext="Copy link"
          secondaryhighlight=""
          secondarytext=""
          tertiaryhighlight=""
          tertiarytext=""
          tertiarytextclasses=""
        />
      </v-list-item-stub>
      
    </v-list-stub>
  </v-menu-stub>
  <!--v-if-->
  <!--v-if-->
</div>
`;
